welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:2: error: not found: value iBirthday
  if (!iBirthday) {
       ^caughtSpeeding:20: error: type mismatch;
 found   : Unit
 required: Int
  if (speed>86) {
  ^caughtSpeeding:13: error: type mismatch;
 found   : Unit
 required: Int
if (isBirthday) {
^